Aquí está la página

--- a/HTML/fichero8.html
+++ b/HTML/fichero8.html
@@ -19,3 +19,54 @@ por un placeholder para que en la casilla donde se introducirá la información 
 </form>
 </body>
 </html>
+
+
+<form action="resultados.html" method="POST">
+  <select name="Portafolio de servicios" id="menuservicios">
+      <option value="Análisis">Análisis</option>
+      <option value="Diseño">Diseño</option>
+      <option value="Instalación">Instalación</option>
+      <option value="Mantenimiento">Mantenimiento</option>
+      <option value="Red eléctrica solar">Red eléctrica solar</option>
+  </select>
+</form>
+<form action="resultados.html" method="POST">
+  <select name="Empresa" id="menuservicios">
+      <option value="Misión">Misión</option>
+      <option value="Visión">Visión</option>
+      <option value="Compromiso ambiental">Compromiso ambiental</option>
+      <option value="Térmicos y condiciones">Térmicos y condiciones</option>
+  </select>
+</form>
+<form action="resultados.html" method="POST">
+  <select name="Portafolio de servicios" id="menuservicios">
+      <option value="Análisis"></option>
+      <option value="Diseño"></option>
+      <option value="Instalación"></option>
+      <option value="mantenimiento"></option>
+      <option value="Red eléctrica solar"></option>
+  </select>
+</form>
+<form action="resultados.html" method="POST">
+  <select name="Portafolio de servicios" id="menuservicios">
+      <option value="Análisis"></option>
+      <option value="Diseño"></option>
+      <option value="Instalación"></option>
+      <option value="mantenimiento"></option>
+      <option value="Red eléctrica solar"></option>
+  </select>
+</form>
+<div id="menu">
+  <ul class="nav">
+      <a href="">
+      Inicio
+      </a>
+  </ul>
+  <ul class="nav">
+      <li><a href="">Análisis</a></li>
+      <li><a href="">Diseño</a></li>
+      <li><a href="">Instalación</a></li>
+      <li><a href="">Mantenimiento</a></li>
+      <li><a href="">Red eléctrica fotovoltaica</a></li>
+  </ul>
+</div>
